--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,48 +1,23 @@
-body {
-	margin: 0;
-	padding: 0;
-	background-color: #F5F5F5;
-	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-}
+    body {
+      animation: colorchange 50s; /* animation-name followed by duration in seconds*/
+         /* you could also use milliseconds (ms) or something like 2.5s */
+      -webkit-animation: colorchange 50s; /* Chrome and Safari */
+    }
 
-.nav {
-	width: 100%;
-	padding: 30px;
-	font-weight: 900;
-	background-color: #6001FF;
-	color: #F644B9;
-}
+    @keyframes colorchange
+    {
+      0%   {background: red;}
+      25%  {background: yellow;}
+      50%  {background: blue;}
+      75%  {background: green;}
+      100% {background: red;}
+    }
 
-.container {
-	padding: 20px;
-	max-width: 600px;
-	margin: 0 auto;
-}
-
-.kicker, .byline {
-	color: #6001FF;
-	font-weight: 900;
-	padding: 30px 0;
-	text-decoration: underline;
-	text-align: center;
-}
-
-.headline {
-	padding: 30px 50px;
-	font-size: 70px;
-	line-height: 70px;
-	font-weight: 900;
-	text-align: center;
-}
-
-.image {
-	padding: 30px 0;
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
-}
-
-.content p {
-	font-family: Georgia, serif;
-	font-size: 20px;
-	line-height: 28px;
-}
+    @-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */
+    {
+      0%   {background: red;}
+      25%  {background: yellow;}
+      50%  {background: blue;}
+      75%  {background: green;}
+      100% {background: red;}
+    }
